# smmdb

./: .dockerignore  .eslintrc  .gitignore  .snyk  .travis.yml  ANNOUNCEMENT.md  Cargo.toml  Dockerfile  DockerfileBuild  DockerfileBuildDep  DockerfileRun  LICENSE  README.md  TODO.md  backup.js  build-electron.js  build-net64.js  deploy.sh  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.static.yml  docker-compose.yml  package-lock.json  package.json  smmdb.dab  store.js  tsconfig.json  webpack.config.js  webpack.dev-client.js  webpack.dev-server.js  webpack.dev.js  webpack.electron-dev.js  webpack.electron-prod.js  webpack.net64-dev.js  webpack.prod.js
.github/workflows/: publish.yml
api/: Cargo.toml  Dockerfile  DockerfileBuild
api/src/: DockerfileBuild  account.rs  collections.rs  config.rs  database.rs  main.rs  minhash.rs  server.rs  session.rs
api/src/account/: mod.rs  request.rs  response.rs
api/src/course/: mod.rs
api/src/course2/: mod.rs  response.rs
api/src/database/: migration.rs  mod.rs
api/src/routes/: courses.rs  index.rs  login.rs  logout.rs  mod.rs
api/src/routes/courses2/: delete.rs  download.rs  get.rs  meta.rs  mod.rs  post.rs  put.rs  thumbnail.rs
api/src/server/: data.rs  mod.rs
api/src/session/: identity.rs  mod.rs
api/src/test/: course
api/swagger/: swagger.json
config/: environment.js  webpack.dev-client.js  webpack.dev-server.js  webpack.electron-dev.js  webpack.electron-prod.js  webpack.gen-store.js  webpack.prod-client.js  webpack.prod-server.js  webpack.prod.js  webpack.similarity.js  webpack.test-server.js  webpack.ver.js
docs/: API.md  smm-test.alextc.de_2017-06-29_14-54-38.html  smm-test.alextc.de_2017-06-29_15-07-06.html
mongo/: Dockerfile  docker-compose.yml
src/client/: renderer.js  renderer.tsx
src/declarations/: browser-locale.d.ts  cross-unzip.d.ts  crypto-random-string.d.ts  device.d.ts  difflib.d.ts  google-id-token-verifier.d.ts  got.d.ts  marked.d.ts  minhash.d.ts
src/electron/: index.js  index.ts  renderer.js  renderer.tsx
src/models/: Match.ts
src/net64/: index.js  renderer.js
src/rust/: Dockerfile  DockerfileBuild  DockerfileRust  account.rs  collections.rs  course.rs  database.rs  main.rs  server.rs
src/server/: Account.js  Account.ts  Course.js  Course.ts  Course64.js  Course64.ts  Database.js  Database.ts  Discord.js  Discord.ts  Lobby.js  Lobby.ts  User.js  User.ts  index.js  index.ts  server.js  store.tsx  test.tsx
src/shared/: Account.js  Account.ts  (+2 more)
test/: test.js
website/: .eslintrc  .gitignore  DockerfileBuild  DockerfileBuildDep  package.json  store.json  tsconfig.json
(+256 files in other folders)
