[package]
name = "smmdb"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[[bin]]
name = "smmdb"
path = "src/rust/main.rs"

[dependencies]
actix-web = "1"
bson = "0.13"
cemu-smm = "4"
chrono = "0.4"
env_logger = "0.6"
itertools = "0.8"
mongodb = "0.3"
protobuf = "2.6"
serde = "1"
serde_json = "1"

[profile]
[profile.release]
debug = false
lto = true
