[package]
name = "smmdb"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.1"
actix-http = "0.2"
actix-session = "*"
actix-web = "1"
cemu-smm = "4"
chrono = "0.4"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
itertools = "0.8"
mongodb = "0.3"
protobuf = "2.8"
reqwest = "0.9"
serde = "1"
serde_json = "1"

[dependencies.serde_qs]
version = "0.5"
features = ["actix"]
