[package]
name = "smmdb"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.1"
actix-http = "0.2"
actix-service = "0.4"
actix-session = "0.2"
actix-web = "1"
brotli2 = "0.3"
cemu-smm = "4"
compression = "0.1"
chrono = "0.4"
env_logger = "0.7"
failure = "0.1"
futures = "0.1"
image = "0.22"
itertools = "0.8"
mongodb = "0.4"
num_cpus = "1.10"
protobuf = "2.8"
rand = "0.7"
rayon = "1.2"
reqwest = "0.9"
serde = "1"
serde_json = "1"
tar = "0.4"
twox-hash = "1.5"

[dependencies.serde_qs]
version = "0.5"
features = ["actix"]
