[package]
name = "smmdb"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.2"
actix-http = "1.0"
actix-service = "1.0"
actix-session = "0.3"
actix-web = "2"
actix-rt = "1"
awc = "1"
brotli2 = "0.3"
bson ="0.14"
cemu-smm = "4.0.24"
compression = "0.1"
chrono = "0.4"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
image = "0.22"
itertools = "0.8"
mongodb = "0.4"
num_cpus = "1.12"
protobuf = "2.10"
rand = "0.7"
rayon = "1.3"
serde = "1"
serde_json = "1"
tar = "0.4"
twox-hash = "1.5"

[dependencies.serde_qs]
git = "https://github.com/Tarnadas/serde_qs"
features = ["actix"]
